--- a/css/styles.css
+++ b/css/styles.css
@@ -36,4 +36,27 @@ video {
 div {
     position: relative;
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+}
+
+button {
+    width: 6rem;
+}
+
+input {
+    width: 20rem;
+}
+
+span {
+    text-decoration: underline;
 }
