--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,11 @@ section {
 
 h1 {
     font-family: 'Aubrey', cursive;
-    font-size: 5rem;
+    font-size: 4rem;
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin-left: 3rem;
+    margin-right: 3rem;
     text-shadow: 0 0 10px rgb(160, 154, 154);
 }
 
@@ -26,6 +27,9 @@ p {
     font-size: 1.5rem;
     color: antiquewhite;
     text-shadow: 0 0 8px black;
+    width: 400px;
+    font-family: 'Aubrey', cursive;
+
 }
 
 video {
@@ -60,4 +64,31 @@ input {
 
 span {
     text-decoration: underline;
+}
+
+.returnedText {
+    font-size: 2rem;
+    color: blanchedalmond;
+    font-family: 'Aubrey', cursive;
+    text-shadow: 0 0 4px black;
+}
+
+.title-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: space-between;
+    justify-content: flex-start;
+
+}
+.title-bar img.left {
+    max-height: 15rem;
+    opacity: 20%;
+}
+.title-bar img.right {
+    max-height: 15rem;
+    opacity: 20%;
+}
+
+.answers {
+
 }
